Fix some spacing

--- a/src/main/webapp/css/page.css
+++ b/src/main/webapp/css/page.css
@@ -51,3 +51,8 @@ body {
 #footer {
     grid-area: footer;
 }
+
+/* Avoid margin when all messages are cleared. */
+#messages .alert:first-of-type {
+    margin-top: 1rem; /* Corresponds to .mt-3 in Bootstrap. */
+}
